--- a/WebApplication/appsettings.json
+++ b/WebApplication/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Host=localhost;Port=5432;Database=DB1;Username=postgres;Password=123456"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
